<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Error Message TextView -->
    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_unknown_error_occurred"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="12dp" />

    <!-- Image View for NASA EPIC Image -->
    <ImageView
        android:id="@+id/image_detail_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/a_nasa_epic_image" />

    <!-- Image Identifier -->
    <TextView
        android:id="@+id/image_identifier_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_detail_image"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        tools:text="@string/image_identifier" />

    <!-- Image Date -->
    <TextView
        android:id="@+id/image_date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_identifier_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        tools:text="@string/image_date" />

    <!-- Image Caption -->
    <TextView
        android:id="@+id/image_caption_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_date_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        tools:text="@string/image_caption" />

    <!-- Image Version -->
    <TextView
        android:id="@+id/image_version_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_caption_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        tools:text="@string/image_version" />

    <!-- Coordinates (Latitude and Longitude) -->
    <TextView
        android:id="@+id/coordinates_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_version_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        tools:text="@string/coordinates" />

    <!-- DSCOVR Position (X, Y, Z) -->
    <TextView
        android:id="@+id/dscovr_position_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/coordinates_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        tools:text="@string/dscovr_position" />

    <!-- Lunar Position (X, Y, Z) -->
    <TextView
        android:id="@+id/lunar_position_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dscovr_position_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        tools:text="@string/lunar_position" />

    <!-- Sun Position (X, Y, Z) -->
    <TextView
        android:id="@+id/sun_position_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lunar_position_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        tools:text="@string/sun_position" />

</androidx.constraintlayout.widget.ConstraintLayout>
