<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/character_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/a_nasa_epic_image" />

        <TextView
            android:id="@+id/character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toTopOf="@id/character_image"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            tools:text="@string/image_identifier" />

        <TextView
            android:id="@+id/character_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/character_name"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            tools:text="@string/image_date" />

        <TextView
            android:id="@+id/character_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/character_year"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            tools:text="@string/image_caption" />

        <TextView
            android:id="@+id/character_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/character_species"
            app:layout_constraintStart_toEndOf="@+id/character_image"
            tools:text="@string/image_version" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>